# fileidentification-galaxy

./: .dockerignore  .env  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.galaxy  README.md  README_Galaxy.md  appconfig.toml  fidr.sh  fileidentification-galaxy.xml  identify.py  pyproject.toml  requirements.txt  update.py
.github/workflows/: docker-publish.yml  linting.yml  planemo-test.yml
fileidentification/: filehandling.py  helpers.py  models.py  output.py  update_signatures.py
fileidentification/conf/: fmt2ext.json  models.py  policies.py  settings.py  update_signatures.py
fileidentification/defenitions/: constants.py  default_policies.json  models.py
fileidentification/definitions/: constants.py  dasch_policies.json  fmt2ext.json  models.py
fileidentification/parser/: parser.py
fileidentification/policies/: default.py  policies.py
fileidentification/tasks/: console_output.py  conversion.py  inspection.py  os_tasks.py  policies.py
fileidentification/wrappers/: converter.py  ffmpeg.py  homebrew_packeges.py  imagemagick.py  wrappers.py
test-data/: output_results.txt  output_results_linux_gh_action.txt
testdata/: test_ffv1.mkv  test_hevc.mkv
testdata/nested folder/: test-000.ts  testavi
