[project]
name = "fileidentification"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.1.0",
    "requests>=2.31.0",
    "typer>=0.10.0",
    "rich>=13.7.1",
    "beautifulsoup4>=4.13.1",
    "pydantic>=2.11.7",
    "pygfried>=0.12.0",
    "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "ruff>=0.13.0",
]

[tool.mypy]
strict = true
enable_error_code = ["possibly-undefined"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "RUF",   # ruff-specific rules
    "PL",   # pylint
    "I",     # isort
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "A",     # flake8-builtins
    "PTH",   # flake8-use-pathlib
]
ignore = [
    "E501",
    "PLW1510",
    "PLR0913",
    "PLR0912",
    "RUF015",
    "PTH208",
    "PTH106"
]