[project]
name = "fileidentification"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.10.0",
    "pydantic>=2.11.7",
    "pygfried>=0.12.0",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
update_fmt = [
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "ruff>=0.13.0",
]

[tool.mypy]
strict = true
enable_error_code = ["possibly-undefined"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "RUF",   # ruff-specific rules
    "PL",   # pylint
    "I",     # isort
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "A",     # flake8-builtins
    "PTH",   # flake8-use-pathlib
]
ignore = [
    "E501",
    "PLW1510",
    "PLR0913",
    "PLR0912",
    "RUF015",
    "PTH208",
    "PTH106"
]